#227 and #258, refresh button where plans and schedules are listed, and changing a schedule from specific days to days-of-the-week now works properly.

--- a/web/templates/taskEdit.html
+++ b/web/templates/taskEdit.html
@@ -132,12 +132,12 @@ $var cssfiles: registry.css taskEdit.css taskView.css
         </div>
         <div id="div_schedules" class="ui-widget-content ui-corner-top toolbox_panel hidden">
             <div class="ui-state-default">
-                <span class="detail_label">Action Plans</span>
+                <span class="detail_label">Action Plans</span><div class="floatright"><span class="refresh_plans_btn ui-icon ui-icon-refresh pointer"></span></div>
             </div>
             <div id="toolbox_plans" class="ui-widget-content"></div>
             <br />
             <div class="ui-state-default">
-                <span class="detail_label">Schedules</span>
+                <span class="detail_label">Schedules</span><div class="floatright"><span class="refresh_plans_btn ui-icon ui-icon-refresh pointer"></span></div>
             </div>
             <div id="toolbox_schedules" class="ui-widget-content"></div>
         </div>
