#368 - Manage pages now support sorting.

--- a/web/templates/cloudAccountEdit.html
+++ b/web/templates/cloudAccountEdit.html
@@ -49,12 +49,12 @@ $var cssfiles:
 				<th class="chkboxcolumn">
 				<input type="checkbox" class="chkbox" id="chkAll" />
 				</th>
-				<th sortcolumn="account_name">Account Name</th>
-				<th sortcolumn="account_id">Account Number</th>
-				<th sortcolumn="provider">Type</th>
-				<th sortcolumn="login_id">Login ID</th>
-				<th sortcolumn="default_cloud">Default Cloud</th>
-				<th sortcolumn="is_default">Default?</th>
+				<th class="sortable">Account Name</th>
+				<th class="sortable">Account Number</th>
+				<th class="sortable">Type</th>
+				<th class="sortable">Login ID</th>
+				<th class="sortable">Default Cloud</th>
+				<th class="sortable">Default?</th>
 			</tr>
 		</thead>
 		<tbody id="accounts"></tbody>
