--- a/web/templates/cloudEdit.html
+++ b/web/templates/cloudEdit.html
@@ -61,11 +61,11 @@ $var cssfiles:
 				<th class="chkboxcolumn">
 				<input type="checkbox" class="chkbox" id="chkAll" />
 				</th>
-				<th sortcolumn="cloud_name">Cloud Name</th>
-				<th sortcolumn="provider">Type</th>
-				<th sortcolumn="api_url">URL</th>
-				<th sortcolumn="api_protocol">Protocol</th>
-				<th sortcolumn="account_name">Default Account</th>
+				<th class="sortable">Cloud Name</th>
+				<th class="sortable">Type</th>
+				<th class="sortable">URL</th>
+				<th class="sortable">Protocol</th>
+				<th class="sortable">Default Account</th>
 			</tr>
 		</thead>
 		<tbody id="clouds"></tbody>
