--- a/web/templates/ecosystemManage.html
+++ b/web/templates/ecosystemManage.html
@@ -40,13 +40,13 @@ $var cssfiles:
                 <th class="chkboxcolumn">
                 <input class="chkbox" type="checkbox" id="chkAll" />
                 </th>
-                <th sortcolumn="ecosystem_name" width="200px"> Name </th>
-                <th sortcolumn="template_name" width="200px"> Template </th>
-                <th sortcolumn="ecosystem_desc" width="200px"> Description </th>
-                <th sortcolumn="storm_status"> Status </th>
-                <th sortcolumn="created_dt"> Created </th>
-                <th sortcolumn="last_update_dt"> Last Update </th>
-                <th sortcolumn="num_objects"> Cloud Items </th>
+                <th class="sortable"> Name </th>
+                <th class="sortable"> Template </th>
+                <th class="sortable"> Description </th>
+                <th class="sortable"> Status </th>
+                <th class="sortable"> Created </th>
+                <th class="sortable"> Last Update </th>
+                <th class="sortable"> Cloud Items </th>
             </tr>
         </thead>
         <tbody id="ecosystems"></tbody>
