--- a/web/templates/taskActivityLog.html
+++ b/web/templates/taskActivityLog.html
@@ -41,16 +41,16 @@ $var cssfiles:
     <table class="jtable" cellspacing="1" cellpadding="1" width="99%">
         <thead>
             <tr>
-                <th sortcolumn="task_instance" width="30px"> Instance </th>
-                <th sortcolumn="task_code"> Task Code </th>
-                <th sortcolumn="task_name"> Task </th>
-                <th sortcolumn="asset_name"> Asset </th>
-                <th sortcolumn="task_status"> Status </th>
-                <th sortcolumn="started_by"> Started By </th>
-                <th sortcolumn="ce_name"> CE </th>
-                <th sortcolumn="process_id"> PID </th>
-                <th sortcolumn="ecosystem_name"> Ecosystem </th>
-                <th sortcolumn="completed_dt" width="100px"> Timing </th>
+                <th class="sortable"> Instance </th>
+                <th class="sortable"> Task Code </th>
+                <th class="sortable"> Task </th>
+                <th class="sortable"> Asset </th>
+                <th class="sortable"> Status </th>
+                <th class="sortable"> Started By </th>
+                <th class="sortable"> CE </th>
+                <th class="sortable"> PID </th>
+                <th class="sortable"> Ecosystem </th>
+                <th class="sortable"> Timing </th>
                 <th width="10px" align="center"></th>
             </tr>
         </thead>
