--- a/web/templates/userEdit.html
+++ b/web/templates/userEdit.html
@@ -48,11 +48,11 @@ $var cssfiles:
                 <th class="chkboxcolumn">
                 <input type="checkbox" class="chkbox" id="chkAll" />
                 </th>
-                <th sortcolumn="status">Status</th>
-                <th sortcolumn="full_name">User</th>
-                <th sortcolumn="username">Login</th>
-                <th sortcolumn="role">Role</th>
-                <th sortcolumn="last_login_dt" width="150px">Last Login</th>
+                <th class="sortable">Status</th>
+                <th class="sortable">User</th>
+                <th class="sortable">Login</th>
+                <th class="sortable">Role</th>
+                <th class="sortable">Last Login</th>
             </tr>
         </thead>
         <tbody id="users"></tbody>
