--- a/web/templates/assetEdit.html
+++ b/web/templates/assetEdit.html
@@ -63,10 +63,10 @@ $var cssfiles:
                 <th class="chkboxcolumn">
                 <input type="checkbox" class="chkbox" id="chkAll" />
                 </th>
-                <th sortcolumn="asset_name" width="250px"> Asset </th>
-                <th sortcolumn="asset_status" width="100px"> Status </th>
-                <th sortcolumn="address" width="50px"> Address </th>
-                <th sortcolumn="credentials" width="125px"> Credential </th>
+                <th class="sortable" width="250px"> Asset </th>
+                <th class="sortable" width="100px"> Status </th>
+                <th class="sortable" width="50px"> Address </th>
+                <th class="sortable" width="125px"> Credential </th>
             </tr>
         </thead>
         <tbody id="assets"></tbody>
