--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -41,6 +41,7 @@ $def with (content)
         <script type="text/javascript" src="static/script/jquery/jquery.timepicker.js"></script>
         <script type="text/javascript" src="static/script/jquery/jquery.base64.js"></script>
         <script type="text/javascript" src="static/script/jquery/jquery.cookie.js"></script>
+        <script type="text/javascript" src="static/script/jquery/jquery.sortElements.js"></script>
         <!-- JavaScript -->
         <script type="text/javascript" src="static/script/masterpage.js"></script>
         <script type="text/javascript" src="static/script/MainScript.js"></script>
