--- a/web/templates/credentialEdit.html
+++ b/web/templates/credentialEdit.html
@@ -47,10 +47,10 @@ $var cssfiles:
                 <th class="chkboxcolumn">
                 <input type="checkbox" class="chkbox" id="chkAll" />
                 </th>
-                <th sortcolumn="credential_name" width="100px"> Credential </th>
-                <th sortcolumn="username" width="100px"> UserName </th>
-                <th sortcolumn="domain" width="100px"> Domain </th>
-                <th sortcolumn="shared_cred_desc" width="350px"> Description </th>
+                <th class="sortable"> Credential </th>
+                <th class="sortable"> UserName </th>
+                <th class="sortable"> Domain </th>
+                <th class="sortable"> Description </th>
             </tr>
         </thead>
         <tbody id="credentials"></tbody>
