--- a/web/templates/ecoTemplateManage.html
+++ b/web/templates/ecoTemplateManage.html
@@ -44,8 +44,8 @@ $var cssfiles:
                 <th class="chkboxcolumn">
                 <input class="chkbox" type="checkbox" id="chkAll" />
                 </th>
-                <th sortcolumn="template_name" width="200px"> Name </th>
-                <th sortcolumn="template_desc" width="400px"> Description </th>
+                <th class="sortable"> Name </th>
+                <th class="sortable"> Description </th>
             </tr>
         </thead>
         <tbody id="ecotemplates"></tbody>
