--- a/web/templates/taskManage.html
+++ b/web/templates/taskManage.html
@@ -41,12 +41,12 @@ $var cssfiles:
                 <th class="chkboxcolumn">
                 <input class="chkbox" type="checkbox" id="chkAll" />
                 </th>
-                <th sortcolumn="task_code" width="75px"> Task Code </th>
-                <th sortcolumn="task_name" width="200px"> Task Name </th>
-                <th sortcolumn="version" width="50px"> Version </th>
-                <th sortcolumn="task_desc" width="400px"> Description </th>
-                <th sortcolumn="task_status" width="75px"> Status </th>
-                <th sortcolumn="versions" width="25px"> Versions </th>
+                <th class="sortable" width="75px"> Task Code </th>
+                <th class="sortable" width="200px"> Task Name </th>
+                <th class="sortable" width="50px"> Version </th>
+                <th class="sortable" width="400px"> Description </th>
+                <th class="sortable" width="75px"> Status </th>
+                <th class="sortable" width="25px"> Versions </th>
             </tr>
         </thead>
         <tbody id="tasks"></tbody>
