Maestro backport - cosmetic ui fixes

--- a/ui/admin/templates/cloudAccountEdit.html
+++ b/ui/admin/templates/cloudAccountEdit.html
@@ -28,7 +28,7 @@ $var cssfiles:
 					<i>Cloud Accounts are required to have a 'default' Cloud.</i>
 				</p>
 				<p>
-					<i>Cloud Accounts can not be deleted if they are associated with any Ecosystems.</i>
+					<i>Cloud Accounts can not be deleted if they are associated with any other records.</i>
 				</p>
 				<p>
 					<a href="http://projects.cloudsidekick.com/projects/cato/wiki/CloudAccount?utm_source=cato_app&amp;utm_medium=helplink&amp;utm_campaign=app" target="_blank"><img src="static/images/icons/info.png" alt="" />Click here</a>
