Maestro backport - fixed embedded command parameters, new SetVariable options, task import fixes.

--- a/ui/admin/templates/taskEdit.html
+++ b/ui/admin/templates/taskEdit.html
@@ -341,6 +341,7 @@ $var cssfiles: registry.css taskEdit.css taskView.css
     <div id="phVars"></div>
     <div class="hidden">
         <input type="hidden" id="hidStepID" />
+        <input type="hidden" id="hidXPathPrefix" />
         <input type="hidden" id="hidOutputParseType" />
         <input type="hidden" id="hidRowDelimiter" />
         <input type="hidden" id="hidColDelimiter" />
