--- a/ui/admin/templates/taskEdit.html
+++ b/ui/admin/templates/taskEdit.html
@@ -77,7 +77,7 @@ $var cssfiles: registry.css taskEdit.css taskView.css
             <hr />
             <table border="0" width="100%">
                 <tr>
-                    <td width="30%"><ul id="categories"></ul></td>
+                    <td width="30%"><div id="categories"></div></td>
                     <td width="70%"><div class="category_functions" id="category_functions"></div></td>
                 </tr>
             </table>
