tag checking enabled on taskEdit/View

--- a/ui/admin/templates/notAllowed.html
+++ b/ui/admin/templates/notAllowed.html
@@ -1,4 +1,4 @@
-$def with ()
+$def with (msg)
 $var jsfiles:
 $var cssfiles:
 
@@ -16,5 +16,7 @@ $var cssfiles:
         <p>
             <span class="ui-icon ui-icon-info forceinline"></span>The requested content isn't available to you.
         </p>
+        <br />
+        <p>$msg</p>
     </div>
 </div>
