New style common ajax.js lib added, several functions consolidated.

--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -47,6 +47,7 @@ $def with (content)
         <script type="text/javascript" src="static/script/MainScript.js"></script>
         <script type="text/javascript" src="static/script/validation.js"></script>
         <script type="text/javascript" src="static/script/logViewDialog.js"></script>
+		<script type="text/javascript" src="static/script/ajax.js"></script>
         <script type="text/javascript" src="static/script/site.master.js"></script>
 		
 		<!-- the jsoneditor -->
