--- a/ui/admin/templates/popup.html
+++ b/ui/admin/templates/popup.html
@@ -37,6 +37,7 @@ $def with (content)
         <script type="text/javascript" src="static/script/masterpage.js"></script>
         <script type="text/javascript" src="static/script/MainScript.js"></script>
         <script type="text/javascript" src="static/script/validation.js"></script>
+		<script type="text/javascript" src="static/script/ajax.js"></script>
 
         <!--Any .js files defined on the content page.-->
         $if content.jsfiles:
