Organized permissions checks.

--- a/ui/admin/templates/notAllowed.html
+++ b/ui/admin/templates/notAllowed.html
@@ -2,19 +2,14 @@ $def with (msg)
 $var jsfiles:
 $var cssfiles:
 
-<style type="text/css">
-	#getting_started {
-		padding:20px;
-		width:500px;
-		margin-left:auto;
-		margin-right:auto;
-	}
-</style>
 <div id="fullwidthcontent">
     <div class="ui-state-highlight ui-corner-all" style="margin-left: auto; margin-right: auto; width: 300px; padding: 20px;">
-        <h2>Oops...</h2>
+        <img src="../static/images/icons/information_32.png" />
+        <h2 class="forceinline">Oops...</h2>
+        <br />
+        <br />
         <p>
-            <span class="ui-icon ui-icon-info forceinline"></span>The requested content isn't available to you.
+            The requested content isn't available.
         </p>
         <br />
         <p>$msg</p>
