documentation links now point to the github wiki

--- a/ui/admin/templates/cloudEdit.html
+++ b/ui/admin/templates/cloudEdit.html
@@ -43,7 +43,7 @@ $var cssfiles:
 					<i>Clouds should have a 'default' Account selected.</i>
 				</p>
 				<p>
-					<a href="http://projects.cloudsidekick.com/projects/cato/wiki/Clouds?utm_source=cato_app&amp;utm_medium=helplink&amp;utm_campaign=app" target="_blank"><img src="static/images/icons/info.png" alt="" />Click here</a>
+					<a href="https://github.com/cloudsidekick/cato/wiki/setup-cloud-endpoint" target="_blank"><img src="static/images/icons/info.png" alt="" />Click here</a>
 					for a more detailed introduction on Clouds.
 				</p>
 			</div>
