--- a/ui/admin/templates/credentialEdit.html
+++ b/ui/admin/templates/credentialEdit.html
@@ -28,7 +28,7 @@ $var cssfiles:
 					<i>Credentials in use by Assets cannot be deleted.</i>
 				</p>
 				<p>
-					<a href="http://projects.cloudsidekick.com/projects/cato/wiki/Assets#Credentials?utm_source=cato_app&amp;utm_medium=helplink&amp;utm_campaign=app" target="_blank"><span class="ui-icon ui-icon-info forceinline"></span>Click here</a>
+					<a href="https://github.com/cloudsidekick/cato/wiki/assets#credentials" target="_blank"><span class="ui-icon ui-icon-info forceinline"></span>Click here</a>
 					for a more detailed introduction to Credentials.
 				</p>
 			</div>
