--- a/ui/admin/templates/deploymentManage.html
+++ b/ui/admin/templates/deploymentManage.html
@@ -25,7 +25,7 @@ $var cssfiles:
 					Deployments cannot be deleted if they are referenced by any Services.
 				</p>
 				<p>
-					<a href="http://projects.cloudsidekick.com/projects/cato/wiki/Deployments?utm_source=cato_app&amp;utm_medium=helplink&amp;utm_campaign=app" target="_blank"><img src="static/images/icons/info.png" alt="" />Click here</a>
+					<a href="" target="_blank"><img src="static/images/icons/info.png" alt="" />Click here</a>
 					for a more detailed introduction to Deployments.
 				</p>
 			</div>
