--- a/ui/admin/templates/tagEdit.html
+++ b/ui/admin/templates/tagEdit.html
@@ -25,7 +25,7 @@ $var cssfiles:
                     Select a Tag from the list to the right to edit it.
                 </p>
                 <p>
-                    <a href="http://projects.cloudsidekick.com/projects/cato/wiki/Tags?utm_source=cato_app&amp;utm_medium=helplink&amp;utm_campaign=app" target="_blank"><span class="ui-icon ui-icon-info forceinline"></span>Click here</a>
+                    <a href="https://github.com/cloudsidekick/cato/wiki/Tags" target="_blank"><span class="ui-icon ui-icon-info forceinline"></span>Click here</a>
                     for a more detailed introduction to Tagging.
                 </p>
             </div>
