--- a/ui/admin/templates/taskManage.html
+++ b/ui/admin/templates/taskManage.html
@@ -22,7 +22,7 @@ $var cssfiles:
 					an action to modify or delete the Tasks you've selected.
 				</p>
 				<p>
-					<a href="http://projects.cloudsidekick.com/projects/cato/wiki/Tasks?utm_source=cato_app&amp;utm_medium=helplink&amp;utm_campaign=app" target="_blank"><img src="static/images/icons/info.png" alt="" />Click here</a>
+					<a href="https://github.com/cloudsidekick/cato/wiki/Cato%20technical%20documentation#tasks" target="_blank"><img src="static/images/icons/info.png" alt="" />Click here</a>
 					for a more detailed introduction to Tasks.
 				</p>
 			</div>
