--- a/ui/admin/templates/userEdit.html
+++ b/ui/admin/templates/userEdit.html
@@ -27,7 +27,7 @@ $var cssfiles:
                     an action to modify or delete the Users you've selected.
                 </p>
                 <p>
-                    <a href="http://projects.cloudsidekick.com/projects/cato/wiki/Security?utm_source=cato_app&amp;utm_medium=helplink&amp;utm_campaign=app" target="_blank"><span class="ui-icon ui-icon-info forceinline"></span>Click here</a>
+                    <a href="https://github.com/cloudsidekick/cato/wiki/security" target="_blank"><span class="ui-icon ui-icon-info forceinline"></span>Click here</a>
                     for a more detailed introduction to Security.
                 </p>
             </div>
