--- a/ui/admin/templates/userEdit.html
+++ b/ui/admin/templates/userEdit.html
@@ -145,7 +145,7 @@ $var cssfiles:
                     </tr>
                     <tr class="password_edit" id="trFailedLoginAttempts">
                         <td style="padding-top: 10px;"> Failed Login Attempts: </td>
-                        <td><span id="lblFailedLoginAttempts"></span>&nbsp;<span id="clear_failed_btn"></span></td>
+                        <td><span id="lblFailedLoginAttempts"></span>&nbsp;&nbsp;<span id="clear_failed_btn">&nbsp;</span></td>
                     </tr>
                     <tr class="password_edit">
                         <td style="padding-top: 10px;"> Password Reset: </td>
